PCHR-1353: Add test to ensure that styleguide opens
This uses `protractor` and `cv` to login and open the style-guide screen.

It includes a handful of utilities.  These probably belong in a separate
project, but for the moment it's convenient to have them here while folks
get a first look.

--- a/org.civicrm.styleguide/package.json
+++ b/org.civicrm.styleguide/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "protractor tests/protractor/conf.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "civicrm-cv": "civicrm/cv-nodejs",
     "gulp": "^3.9.0",
     "gulp-sass": "^2.1.0",
     "gulp-sass-bulk-import": "^0.3.2",
