--- a/org.civicrm.bootstrapcivicrm/package.json
+++ b/org.civicrm.bootstrapcivicrm/package.json
@@ -9,14 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "es6-promise": "~3.2.1",
     "gulp": "^3.9.0",
     "gulp-postcss": "~6.1.1",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-sass-bulk-import": "^0.3.2",
-    "gulp-sass-glob": "0.0.2",
     "gulp-strip-css-comments": "^1.2.0",
+    "gulp-transform-selectors": "0.0.2",
     "postcss-discard-duplicates": "~2.0.1",
     "postcss-prefix-selector": "~1.4.0"
   }
