--- a/org.civicrm.bootstrap/org.civicrm.bootstrapexample/package.json
+++ b/org.civicrm.bootstrap/org.civicrm.bootstrapexample/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
+    "node-sass": "3.4.2",
     "gulp-sass": "^2.1.0",
     "gulp-sass-bulk-import": "^0.3.2",
     "gulp-sass-glob": "0.0.2"
