--- a/org.civicrm.bootstrap/package.json
+++ b/org.civicrm.bootstrap/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "node-sass": "3.4.2",
     "gulp-sass": "^2.1.0",
     "gulp-sass-bulk-import": "^0.3.2"
   }
