--- a/org.civicrm.bootstrapcivicrm/package.json
+++ b/org.civicrm.bootstrapcivicrm/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.0",
     "gulp-postcss": "~6.1.1",
     "gulp-rename": "^1.2.2",
+    "node-sass": "3.4.2",
     "gulp-sass": "^2.1.0",
     "gulp-sass-bulk-import": "^0.3.2",
     "gulp-sass-glob": "0.0.2",
