gulpfile.js, package.json - Enable civicrm-scssroot
Across all extensions that build SCSS, enable the utility `civicrm-scssroot` for
resolving cross-extensions references.

--- a/org.civicrm.bootstrap/package.json
+++ b/org.civicrm.bootstrap/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "civicrm-scssroot": "git://github.com/totten/civicrm-scssroot.git#v0.1.1",
     "gulp": "^3.9.0",
     "gulp-postcss": "~6.1.1",
     "node-sass": "3.4.2",
