--- a/contactsummary/package.json
+++ b/contactsummary/package.json
@@ -2,6 +2,7 @@
   "name": "contact-summary",
   "version": "0.0.1",
   "devDependencies": {
+    "civicrm-scssroot": "git://github.com/totten/civicrm-scssroot.git#v0.1.1",
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
     "gulp-rename": "^1.2.2",
