--- a/uk.co.compucorp.civicrm.hrcore/backstop_data/scenarios/tab-tasks.json
+++ b/uk.co.compucorp.civicrm.hrcore/backstop_data/scenarios/tab-tasks.json
@@ -3,7 +3,7 @@
     {
       "label": "Tasks",
       "delay": 2000,
-      "url": "http://localhost:8123/index.php?q=civicrm/contact/view&reset=1&cid=2",
+      "url": "index.php?q=civicrm/contact/view&reset=1&cid=2",
       "onBeforeScript": "login",
       "onReadyScript": "contact-summary/tasks/show"
     }
