--- a/org.civicrm.bootstrap/package.json
+++ b/org.civicrm.bootstrap/package.json
@@ -15,6 +15,7 @@
     "gulp-sass": "^2.1.0",
     "gulp-sass-bulk-import": "^0.3.2",
     "gulp-strip-css-comments": "^1.2.0",
+    "gulp-transform-selectors": "0.0.2",
     "postcss-discard-duplicates": "~2.0.1",
     "postcss-prefix-selector": "~1.4.0"
   }
