--- a/uk.co.compucorp.civicrm.hrleaveandabsences/package.json
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/package.json
@@ -16,6 +16,9 @@
     "gulp-sass": "^2.1.0",
     "gulp-sass-bulk-import": "^0.3.2",
     "gulp-sequence": "^0.4.6",
+    "gulp-postcss": "~6.1.1",
+    "postcss-prefix-selector": "~1.4.0",
+    "gulp-transform-selectors": "0.0.2",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
