--- a/uk.co.compucorp.civicrm.hremails/email-templates/package.json
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/package.json
@@ -17,6 +17,7 @@
     "foundation-emails": "^2.2.1"
   },
   "devDependencies": {
+    "civicrm-scssroot": "git://github.com/totten/civicrm-scssroot.git#v0.1.1",
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.7.2",
