--- a/uk.co.compucorp.civicrm.hremails/email-templates/package.json
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/package.json
@@ -17,12 +17,12 @@
     "foundation-emails": "^2.2.1"
   },
   "devDependencies": {
-    "civicrm-scssroot": "git://github.com/totten/civicrm-scssroot.git#v0.1.1",
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.7.2",
     "beepbeep": "^1.2.0",
     "browser-sync": "^2.11.0",
+    "civicrm-scssroot": "git://github.com/totten/civicrm-scssroot.git#v0.1.1",
     "colors": "^1.1.2",
     "gulp": "git+https://github.com/gulpjs/gulp.git#4.0",
     "gulp-awspublish": "^3.0.1",
@@ -39,10 +39,12 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-tap": "^1.0.1",
     "gulp-uncss": "^1.0.1",
     "gulp-zip": "^3.2.0",
     "inky": "^1.3.6",
     "lazypipe": "^1.0.1",
+    "lodash": "^4.17.4",
     "merge-stream": "^1.0.0",
     "panini": "^1.3.0",
     "rimraf": "^2.3.3",
