--- a/uk.co.compucorp.civicrm.hrleaveandabsences/package.json
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "devDependencies": {
+    "civicrm-scssroot": "git://github.com/totten/civicrm-scssroot.git#v0.1.1",
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
     "gulp-rename": "^1.2.2",
