--- a/uk.co.compucorp.civicrm.hrsampledata/phpunit.xml.dist
+++ b/uk.co.compucorp.civicrm.hrsampledata/phpunit.xml.dist
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <phpunit backupGlobals="false" backupStaticAttributes="false" colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" processIsolation="false" stopOnFailure="false" syntaxCheck="false" bootstrap="tests/phpunit/bootstrap.php">
   <testsuites>
-    <testsuite name="My Test Suite">
+    <testsuite name="HR Sample Data Extension Test Suite">
       <directory>./tests/phpunit</directory>
     </testsuite>
   </testsuites>
