--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ hrabsence/build
 
 # Exclude sass cache from all extension directories
 */.sass-cache/
+
+# Exclude all JS source map files
+*.js.map
