--- a/contactsummary/package.json
+++ b/contactsummary/package.json
@@ -1,6 +1,12 @@
 {
   "name": "contact-summary",
   "version": "0.0.1",
+  "semistandard": {
+    "globals": [
+      "CRM",
+      "inject"
+    ]
+  },
   "devDependencies": {
     "civicrm-scssroot": "git://github.com/totten/civicrm-scssroot.git#v0.1.1",
     "gulp": "^3.9.0",
