--- a/hrjobcontract/package.json
+++ b/hrjobcontract/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "civicrm-cv": "^0.1.2",
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
     "gulp-rename": "^1.2.2",
