PCHR-2771: Support leave in hours in leave contract

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ hrabsence/build
 
 # Exclude sass cache from all extension directories
 */.sass-cache/
+
+# Exclude temporary JS build files
+**/js/build.tmp.js
