--- a/hrui/package.json
+++ b/hrui/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "~2.6.1",
     "gulp-uglify": "^2.0.0"
   }
 }
